@@ -3,13 +3,12 @@
 # Verbose mode
 #export DH_VERBOSE=1
 
-
-DEB_PYTHON_SYSTEM=pysupport
-
-#export DH_VERBOSE=1
+# Lucid does not have dh_python2, but we would like to be able to use this
+# rules file to build on lucid as well. Thus the branching logic.
+WITH_PYTHON2 = $(shell test -f /usr/bin/dh_python2 && echo "--with python2")
 
 %:
-	dh $@
+	dh $@ ${WITH_PYTHON2}
 
 override_dh_auto_clean:
 	dh_auto_clean
